--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 html {
-  color: black  
+  font-size: 62.5%;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: black;
+  color: #efefef;
+
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+}
+
+
+.center-box {
+
+}
+
+
+#logo {
+  width: 5rem;
 }
