--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ body {
   margin-bottom: 2rem;
 }
 
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 #logo {
   width: 5rem;
